[gd_scene load_steps=10 format=2]

[ext_resource path="res://Graphics/Player.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 2 )

[sub_resource type="Animation" id=2]
resource_name = "Fall"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=5]
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 2, 2 )

[sub_resource type="ParticlesMaterial" id=7]
lifetime_randomness = 0.5
emission_shape = 2
emission_box_extents = Vector3( 2, 2, 1 )
flag_disable_z = true
gravity = Vector3( 0, 10, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 0.262745, 0.321569, 0.239216, 1 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fall = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/Jump = SubResource( 4 )
anims/Walk = SubResource( 5 )

[node name="DamageDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageDetector"]
shape = SubResource( 6 )

[node name="DashTween" type="Tween" parent="."]

[node name="DashParticles" type="Particles2D" parent="."]
emitting = false
amount = 150
local_coords = false
process_material = SubResource( 7 )

[connection signal="body_entered" from="DamageDetector" to="." method="_on_DamageDetector_body_entered"]
[connection signal="tween_all_completed" from="DashTween" to="." method="_on_DashTween_tween_all_completed"]
